erDiagram
    %% Entités Centrales du Système
    UTILISATEURS {
        int id PK
        string nom_utilisateur UK
        string email UK
        enum role
        string mot_de_passe
        int id_specifique_role
        datetime date_creation
        boolean email_verifie
    }

    PATIENTS {
        int id PK
        string prenom
        string nom
        date date_naissance
        string CNE UK
        string telephone
        string adresse
        enum groupe_sanguin
        string profession
        enum sexe
        string contact_urgence
        boolean actif
    }

    MEDECINS {
        int id PK
        string prenom
        string nom
        int specialite_id FK
        string numero_ordre UK
        decimal latitude
        decimal longitude
        decimal tarif_consultation
        enum statut
        boolean accepte_nouveaux_patients
    }

    SPECIALITES {
        int id PK
        string nom UK
        text description
        boolean active
        decimal tarif_moyen
    }

    %% Entités Rendez-vous et Consultations
    RENDEZ_VOUS {
        int id PK
        int patient_id FK
        int medecin_id FK
        datetime date_heure
        enum statut
        text motif
        enum type
        decimal tarif_applique
    }

    CONSULTATIONS {
        int id PK
        int rdv_id FK
        text motif_consultation
        text examen_clinique
        text diagnostic
        text prescription
        text recommandations
        datetime date_consultation
    }

    %% Entités Médicales
    ANTECEDENTS_MEDICAUX {
        int id PK
        int patient_id FK
        enum type
        text description
        date date_diagnostic
        boolean actif
    }

    TRAITEMENTS {
        int id PK
        int patient_id FK
        int medicament_id FK
        text posologie
        date date_debut
        date date_fin
        enum observance
        boolean traitement_actif
    }

    MEDICAMENTS {
        int id PK
        string nom_commercial UK
        string principe_actif
        string forme
        string dosage
        text contre_indications
        boolean sur_ordonnance
    }

    %% Entités Analyses
    CATEGORIES_ANALYSES {
        int id PK
        string nom UK
        text description
        boolean active
    }

    TYPES_ANALYSES {
        int id PK
        int categorie_id FK
        string nom UK
        decimal valeur_reference_min
        decimal valeur_reference_max
        string unite
    }

    RESULTATS_ANALYSES {
        int id PK
        int patient_id FK
        int type_analyse_id FK
        decimal valeur
        date date_analyse
        text interpretation
        enum statut
    }

    %% Entités Géolocalisation
    INSTITUTIONS {
        int id PK
        string nom
        text adresse
        enum type
        decimal latitude
        decimal longitude
        int medecin_proprietaire_id FK
        enum statut
    }

    DISPONIBILITES_MEDECIN {
        int id PK
        int medecin_id FK
        enum jour_semaine
        time heure_debut_matin
        time heure_fin_matin
        time heure_debut_apres_midi
        time heure_fin_apres_midi
        int intervalle_minutes
    }

    %% Entités IA et Notifications
    DIAGNOSIS_SUGGESTIONS {
        int id PK
        int patient_id FK
        json symptomes_rapportes
        json suggestions_ia
        decimal niveau_confiance
        enum urgence_detectee
        datetime date_analyse
        string service_ia_utilise
    }

    NOTIFICATIONS {
        int id PK
        int utilisateur_id FK
        string titre
        text contenu
        enum type
        boolean lu
        datetime date_creation
    }

    FAVORIS_MEDECINS {
        int id PK
        int patient_id FK
        int medecin_id FK
        datetime date_ajout
    }

    HISTORIQUE_ACTIONS {
        int id PK
        int utilisateur_id FK
        string action
        string table_affectee
        json donnees_avant
        json donnees_apres
        datetime date_action
    }

    %% Relations Principales
    UTILISATEURS ||--o| PATIENTS : "1:1"
    UTILISATEURS ||--o| MEDECINS : "1:1"
    UTILISATEURS ||--o| INSTITUTIONS : "1:1"

    PATIENTS ||--o{ RENDEZ_VOUS : "1:N"
    MEDECINS ||--o{ RENDEZ_VOUS : "1:N"
    RENDEZ_VOUS ||--o| CONSULTATIONS : "1:1"

    PATIENTS ||--o{ ANTECEDENTS_MEDICAUX : "1:N"
    PATIENTS ||--o{ TRAITEMENTS : "1:N"
    PATIENTS ||--o{ RESULTATS_ANALYSES : "1:N"
    PATIENTS ||--o{ DIAGNOSIS_SUGGESTIONS : "1:N"

    MEDECINS }o--|| SPECIALITES : "N:1"
    MEDECINS ||--o{ DISPONIBILITES_MEDECIN : "1:N"
    MEDECINS ||--o{ INSTITUTIONS : "1:N"

    MEDICAMENTS ||--o{ TRAITEMENTS : "1:N"
    CATEGORIES_ANALYSES ||--o{ TYPES_ANALYSES : "1:N"
    TYPES_ANALYSES ||--o{ RESULTATS_ANALYSES : "1:N"

    PATIENTS ||--o{ FAVORIS_MEDECINS : "1:N"
    MEDECINS ||--o{ FAVORIS_MEDECINS : "1:N"

    UTILISATEURS ||--o{ NOTIFICATIONS : "1:N"
    UTILISATEURS ||--o{ HISTORIQUE_ACTIONS : "1:N" 